SITIO GALEO-ALANIS

--- a/productos.html
+++ b/productos.html
@@ -23,7 +23,7 @@
                         alt="Jarros Termicos">
                     <div class="card-body">
                         <p class="card-text">JARROS TERMICOS - Para mantener tu bebida fria o caliente, elegi lo que quieras que le estampemos que lo hacemos!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style= "background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70)">COMPRAR</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-left: 30px">
@@ -31,7 +31,7 @@
                         alt="River Boca">
                     <div class="card-body">
                         <p class="card-text">TAZA CERAMICA - Sabias que poder pedirnos una raza de ceramica estampada con lo que a vos se te ocurra?...no lo dudes, contactanos que hacemos la tuya!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style= "background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">COMPRAR</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-left: 30px">
@@ -39,7 +39,7 @@
                         alt="Mate Plastico">
                     <div class="card-body">
                         <p class="card-text">MATE PERSONALIZADO - Tambien podes pedirnos mates plasticos estampados con lo que a vos mas te guste!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style= "background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">COMPRAR</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-left: 30px">
@@ -47,7 +47,7 @@
                         alt="Set Fin de año"> 
                     <div class="card-body">
                         <p class="card-text">REGALOS EMPRESARIALES - Podes pedirnos que armemos algun regalo empresarial para fin de año o cuando vos quieras!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style= "background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">COMPRAR</a>
                     </div>
                 </div>
 
@@ -56,7 +56,7 @@
                         alt="Comederos">
                     <div class="card-body">
                         <p class="card-text">COMEDEROS PARA MASCOTAS - Ahora podes tener el comedero de tu mascota con su nombre, Pedile el suyo!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style= "background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">COMPRAR</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-left: 30px; margin-top: 30px;">
@@ -64,7 +64,7 @@
                         alt="Identificadores">
                     <div class="card-body">
                         <p class="card-text">IDENTIFICADOR DE MASCOTAS - Coloca en tu mascota un identificador con su nombre y tu telefono para asegurarte que si se pierde, te puedan contactar para avisarte!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style= "background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">COMPRAR</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-left: 30px; margin-top: 30px;">
@@ -72,7 +72,7 @@
                         alt="Frascos">
                     <div class="card-body">
                         <p class="card-text">FRASCOS SOUVENIR - Contamos con Frascos Personalizados para que puedas tener en una Fiesta!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style= "background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">COMPRAR</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-left: 30px; margin-top: 30px;">
@@ -80,7 +80,7 @@
                         alt="Vinilos">
                     <div class="card-body">
                         <p class="card-text">VINILOS AUTOADHESIVOS - Pedi tu plancha de vinilos autoadhesivos personalizados para pegarlos donde quieras!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style= "background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
     </div>
     </div>
     <div class="container-fluid">
-        <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Galeon.html" class="btn btn-primary" style="margin-top: 100px; margin-left: 600px;">HOME</a>
+        <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Galeon.html" class="btn btn-primary" style="margin-top: 100px; margin-left: 600px; background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">HOME</a>
     </div>
     <footer style="margin-top: 150px;">Realizado por GABRIEL
         GALEANO - 2023</footer>
