--- a/ubicacion.html
+++ b/ubicacion.html
@@ -26,7 +26,7 @@
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="container-fluid">
-        <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Galeon.html" class="btn btn-primary" style="margin-top: 50px; margin-left: 600px;">HOME</a>
+        <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Galeon.html" class="btn btn-primary" style="margin-top: 50px; margin-left: 600px;background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">HOME</a>
     </div>
     <footer style="margin-top: 5 0px;">Realizado por GABRIEL GALEANO - 2023</footer>
 
