--- a/ubicacionAlanis.html
+++ b/ubicacionAlanis.html
@@ -24,7 +24,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.3087086649452!2d-58.394942885195626!3d-34.596354464614656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccabe74348197%3A0x8c958cc118317a2b!2sAv.%20Sta.%20Fe%201770%2C%20C1060ABQ%20CABA!5e0!3m2!1ses!2sar!4v1673994252914!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div class="container-fluid">
-        <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Alanis.html" class="btn btn-primary" style="margin-top: 50px; margin-left: 600px;">HOME</a>
+        <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Alanis.html" class="btn btn-primary" style="margin-top: 50px; margin-left: 600px; background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)">HOME</a>
     </div>
     <footer style="margin-top: 50px;">Realizado por GABRIEL GALEANO - 2023</footer>
 </body>
