--- a/contacto.html
+++ b/contacto.html
@@ -40,12 +40,12 @@
                 <textarea class="form-control" id="mensaje" rows="3"></textarea>
             </div>
             <div class="col-10">
-                <button type="submit" class="btn btn-primary" style="margin-top: 20px;">Enviar</button>
+                <button type="submit" class="btn btn-primary" style="margin-top: 20px; background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">Enviar</button>
             </div>
         </form>
     </div>
     <div class="container-fluid">
-        <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Galeon.html" class="btn btn-primary" style="margin-top: 50px; margin-left: 600px;">HOME</a>
+        <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Galeon.html" class="btn btn-primary" style="margin-top: 50px; margin-left: 600px; background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">HOME</a>
     </div>
     <!--Fin Contacto-->
     <footer style="margin-top: 80px;">Realizado por GABRIEL GALEANO - 2023</footer>
