--- a/contactoAlanis.html
+++ b/contactoAlanis.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="../SITIO GALEON-ALANIS/css/contactoAlanis.css">
+    <link rel="stylesheet" href="./css/contactoAlanis.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -40,13 +40,13 @@
                 <textarea class="form-control" id="mensaje" rows="3"></textarea>
             </div>
             <div class="col-10">
-                <button type="submit" class="btn btn-primary" style="margin-top: 20px;">Enviar</button>
+                <button type="submit" class="btn btn-primary" style="margin-top: 20px; background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)">Enviar</button>
             </div>
         </form>
     </div>
     <!--Fin Contacto-->
     <div class="container-fluid">
-        <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Alanis.html" class="btn btn-primary" style="margin-top: 50px; margin-left: 600px;">HOME</a>
+        <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Alanis.html" class="btn btn-primary" style="margin-top: 50px; margin-left: 600px; background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241);">HOME</a>
     </div>
     <footer style="margin-top: 80px;">Realizado por GABRIEL GALEANO - 2023</footer>
 </body>
