--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GALEON - ALANIS</title>
-    <link rel="stylesheet" href="../SITIO GALEON-ALANIS/css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -25,20 +25,19 @@
             </div>
         </div>
     </div>
-    <div class="row"  style="margin-top: 60px;">
+    <div class="row"  style="margin-top: 60px">
         <div id="Galeon1" class="col">
-            <a class="btn btn-primary" style="background-color: rgb(56, 199, 56);;"
+            <a class="btn btn-primary" style="background-color: rgb(56, 199, 56); border-color:  rgb(56, 199, 56)"
                 href=file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Galeon.html
                 target="_blank" role="button">Conocé GALEON</a>
         </div>
         <div id="Alanis1" class="col">
-            <a class="btn btn-primary" style="background-color: rgb(252, 129, 241);"
+            <a class="btn btn-primary" style="background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241);"
                 href=file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Alanis.html
                 target="_blank" role="button">Conocé ALANIS</a>
         </div>
     </div>
-    <footer style="margin-top: 150px;">Realizado por GABRIEL
-        GALEANO - 2023</footer>
+    <footer>Realizado por GABRIEL GALEANO - 2023</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
