--- a/productosAlanis.html
+++ b/productosAlanis.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
-    <link rel="stylesheet" href="../SITIO GALEON-ALANIS/css/productosAlanis.css">
+    <link rel="stylesheet" href="./css/productosAlanis.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -16,14 +16,14 @@
         <div class="col">
             <img id="logoAlanis" src="../SITIO GALEON-ALANIS/IMG/Logo/ALANIS LOGO FINAL - copia.jpg" alt="ALANIS">
             <h5>LA DEL MATRIARCADO</h5>
-            <h3 style="padding-top: 30px; padding-bottom: 30px; text-align: center;">Productos en Venta</h3>
             <div class="container-fluid col row" id="listaProductos">
+                <h3 style="padding-top: 60px; padding-bottom: 30px;">Productos en Venta</h3>
                 <div class="card" style="width: 18rem; margin-left: 15px;">
                     <img src="../SITIO GALEON-ALANIS/IMG/Chicos/20200802_135221.jpg" class="card-img-top"
                         alt="Set Taza Fibras">
                     <div class="card-body">
                         <p class="card-text">TAZAS PARA PINTAR - Regala un set de tazas plasticas para pintar, reutilizablescon 6 Fibras de Regalo!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style="background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)">COMPRAR</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-left: 30px">
@@ -31,7 +31,7 @@
                         alt="Taza Ceramica">
                     <div class="card-body">
                         <p class="card-text"> TAZA DE CERAMICA PERSONALIZADA - Pedi una taza Personalizada con lo que a vos se te ocurra!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style="background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)">COMPRAR</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-left: 30px">
@@ -39,7 +39,7 @@
                         alt="Vinilo Pared">
                     <div class="card-body">
                         <p class="card-text"> VINILO AUTOADHESIVO PARED - Ahora podes pedir vinilos con el motivo que quieras y pegarlo en la pared!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style="background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)">COMPRAR</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-left: 30px">
@@ -47,16 +47,15 @@
                         alt="Set Fin de año">
                     <div class="card-body">
                         <p class="card-text">REGALOS EMPRESARIALES - Podes pedirnos que armemos algun regalo empresarial para fin de año o cuando vos quieras!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style="background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)">COMPRAR</a>
                     </div>
                 </div>
-
                 <div class="card" style="width: 18rem; margin-left: 15px; margin-top: 30px;">
                     <img src="../SITIO GALEON-ALANIS/IMG/Bolsas - Canastos/20200712_131008.jpg" class="Bolsa Frida"
                         alt="Bolsas">
                     <div class="card-body">
                         <p class="card-text"> BOLSA DE TELA - Pedi tu bolsa de tela estampadas en vinilo tetil con la figura que vos desees!...Pedi la tuya!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style="background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)">COMPRAR</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-left: 30px; margin-top: 30px;">
@@ -64,7 +63,7 @@
                         alt="Delantales">
                     <div class="card-body">
                         <p class="card-text"> DELANTAL PERSINALIZADO - Tenemos delantales de jean estampados en vinilo textil con la frase o figura que vos quieras!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style="background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)">COMPRAR</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-left: 30px; margin-top: 30px;">
@@ -72,7 +71,7 @@
                         alt="Frascos">
                     <div class="card-body">
                         <p class="card-text">FRASCOS SOUVENIR - Contamos con Frascos Personalizados para que puedas tener en una Fiesta!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style="background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)">COMPRAR</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem; margin-left: 30px; margin-top: 30px;">
@@ -80,7 +79,7 @@
                         alt="Set de Jardin">
                     <div class="card-body">
                         <p class="card-text"> SET DE JARDIN - Pedinos el set de Jardin pesonalizado con Babero, Servilleta, Mantelito y Taza para los mas chicos de la familia!</p>
-                        <a href="#" class="btn btn-primary">COMPRAR</a>
+                        <a href="#" class="btn btn-primary" style="background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)">COMPRAR</a>
                     </div>
                 </div>
             </div>
@@ -91,7 +90,7 @@
     </div>
     </div>
     <div class="container-fluid">
-        <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Alanis.html" class="btn btn-primary" style="margin-top: 100px; margin-left: 600px;">HOME</a>
+        <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Alanis.html" class="btn btn-primary" style="margin-top: 100px; margin-left: 600px; background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)">HOME</a>
     </div>
     <footer style="margin-top: 150px;">Realizado por GABRIEL
         GALEANO - 2023</footer>
