--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quienes Somos</title>
-  <link rel="stylesheet" href="../SITIO GALEON-ALANIS/css/quienesSomos.css">
+  <link rel="stylesheet" href="./css/quienesSomos.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -21,12 +21,12 @@
           de los clientes que lleva ya 5 años de vida, apostando a mejorar dia a dia, a través de la calidad de nuestros
           productos, en la satisfaccion de nuestros clientes.</p>
         <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/contacto.html"
-          class="btn btn-primary">CONTACTO</a>
+          class="btn btn-primary" style="background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">CONTACTO</a>
       </div>
     </div>
   </div>
   <div class="container-fluid">
-    <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Galeon.html" class="btn btn-primary" style="margin-top: 50px; margin-left: 600px;">HOME</a>
+    <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Galeon.html" class="btn btn-primary" style="margin-top: 50px; margin-left: 600px; background-color: rgb(89, 226, 70); border-color: rgb(89, 226, 70);">HOME</a>
 </div>
   <footer style="margin-top: 100px;">Realizado por GABRIEL GALEANO - 2023</footer>
 </body>
