--- a/quienesSomosAlanis.html
+++ b/quienesSomosAlanis.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quienes Somos</title>
-    <link rel="stylesheet" href="../SITIO GALEON-ALANIS/css/quienesSomosAlanis.css">
+    <link rel="stylesheet" href="./css/quienesSomosAlanis.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -16,12 +16,12 @@
             <div class="card-body">
               <h5 class="card-title">QUIENES SOMOS</h5>
               <p class="card-text">Somos una Empresa que comenzó a crear diferentes productos para satisfacer las necesidades de los clientes que lleva ya 5 años de vida, apostando a mejorar dia a dia, a través de la calidad de nuestros productos, en la satisfaccion de nuestros clientes.</p>
-              <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/contactoAlanis.html" class="btn btn-primary">CONTACTO</a>
+              <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/contactoAlanis.html" class="btn btn-primary" style="background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)">CONTACTO</a>
             </div>
           </div>
         </div>
         <div class="container-fluid">
-          <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Alanis.html" class="btn btn-primary" style="margin-top: 50px; margin-left: 600px;">HOME</a>
+          <a href="file:///C:/Back%20UP%20-%20OCT%202020/UTN%202/Proyecto%20Final/SITIO%20GALEON-ALANIS/Alanis.html" class="btn btn-primary" style="margin-top: 50px; margin-left: 600px; background-color: rgb(252, 129, 241); border-color: rgb(252, 129, 241)"">HOME</a>
       </div>
         <footer style="margin-top: 100px;">Realizado por GABRIEL
           GALEANO - 2023</footer></body>
